--- a/hackerrank/TODO.txt
+++ b/hackerrank/TODO.txt
@@ -1,1 +1,5 @@
 Xor and Sum (50) [50]
+Real Estate Broker (50) [100]
+Angry Children 2 (50) [150]
+Demanding Money (50) [200]
+Substring Diff (60) [260]
