Forgot to update the cumulative score for TODO.txt

--- a/hackerrank/TODO.txt
+++ b/hackerrank/TODO.txt
@@ -8,6 +8,6 @@ Police Operation (100) [545]
 New Year Present (80) [625]
 Travel in Hackerland (80) [705]
 Jumping Rooks (80) [785]
-Jeanie's Route (80) 
-Computer Game (80)
-Find The Path (75)
+Jeanie's Route (80) [865]
+Computer Game (80) [945]
+Find The Path (75) [1020]
