Add Longest Mod Path to the TODO list - I solved it in my head (I think) months ago!

--- a/hackerrank/TODO.txt
+++ b/hackerrank/TODO.txt
@@ -11,3 +11,4 @@ Jumping Rooks (80) [785]
 Jeanie's Route (80) [865]
 Computer Game (80) [945]
 Find The Path (75) [1020]
+Longest Mod Path (80) [1100]
