--- a/hackerrank/TODO.txt
+++ b/hackerrank/TODO.txt
@@ -3,12 +3,13 @@ GCD Matrix (60) [140]
 Clues on a Binary Path (60) [200]
 Beautiful Strings (80) [280]
 Favorite Sequence (95) [375]
-Maximising Mission Points (70) [445]
-Police Operation (100) [545]
-New Year Present (80) [625]
-Travel in Hackerland (80) [705]
-Jumping Rooks (80) [785]
-Jeanie's Route (80) [865]
-Computer Game (80) [945]
-Find The Path (75) [1020]
-Longest Mod Path (80) [1100]
+Quadrant Queries (100) [475]
+Maximising Mission Points (70) [545]
+Police Operation (100) [645]
+New Year Present (80) [725]
+Travel in Hackerland (80) [805]
+Jumping Rooks (80) [885]
+Jeanie's Route (80) [965]
+Computer Game (80) [1045]
+Find The Path (75) [1120]
+Longest Mod Path (80) [1200]
