--- a/hackerrank/TODO.txt
+++ b/hackerrank/TODO.txt
@@ -1,13 +1,20 @@
 GCD Matrix (60) [60]
-Clues on a Binary Path (60) [120]
-Beautiful Strings (80) [200]
-Favorite Sequence (95) [295]
-Maximising Mission Points (70) [465]
-Police Operation (100) [565]
-New Year Present (80) [645]
-Travel in Hackerland (80) [725]
-Jumping Rooks (80) [805]
-Jeanie's Route (80) [885]
-Computer Game (80) [965]
-Longest Mod Path (80) [1120]
-Find The Path (75) [1040]
+Mandagora Forest (50) [110]
+Superman Celebrates Diwali (80) [190]
+The Indian Job (70) [260]
+Dorsey Thief (85) [345]
+Powers Game (50) [395]
+Chocolate Game (90) [485]
+A Stones Game (90) [575]
+Clues on a Binary Path (60) [635]
+Beautiful Strings (80) [715]
+Favorite Sequence (95) [810]
+Maximising Mission Points (70) [880]
+Police Operation (100) [980]
+New Year Present (80) [1060]
+Travel in Hackerland (80) [1140]
+Jumping Rooks (80) [1220]
+Jeanie's Route (80) [1300]
+Computer Game (80) [1380]
+Longest Mod Path (80) [1460]
+Find The Path (75) [1535]
