Add another challenge (Black and White Tree) to list, as it looks like it might the solvable by the same technique as Dorsey Thief.

--- a/hackerrank/TODO.txt
+++ b/hackerrank/TODO.txt
@@ -3,18 +3,19 @@ Mandagora Forest (50) [110]
 Superman Celebrates Diwali (80) [190]
 The Indian Job (70) [260]
 Dorsey Thief (85) [345]
-Powers Game (50) [395]
-Chocolate Game (90) [485]
-A Stones Game (90) [575]
-Clues on a Binary Path (60) [635]
-Beautiful Strings (80) [715]
-Favorite Sequence (95) [810]
-Maximising Mission Points (70) [880]
-Police Operation (100) [980]
-New Year Present (80) [1060]
-Travel in Hackerland (80) [1140]
-Jumping Rooks (80) [1220]
-Jeanie's Route (80) [1300]
-Computer Game (80) [1380]
-Longest Mod Path (80) [1460]
-Find The Path (75) [1535]
+Black and White Tree (80) [425]
+Powers Game (50) [475]
+Chocolate Game (90) [565]
+A Stones Game (90) [655]
+Clues on a Binary Path (60) [715]
+Beautiful Strings (80) [795]
+Favorite Sequence (95) [890]
+Maximising Mission Points (70) [960]
+Police Operation (100) [1060]
+New Year Present (80) [1140]
+Travel in Hackerland (80) [1220]
+Jumping Rooks (80) [1300]
+Jeanie's Route (80) [1380]
+Computer Game (80) [1460]
+Longest Mod Path (80) [1540]
+Find The Path (75) [1615]
