--- a/hackerrank/TODO.txt
+++ b/hackerrank/TODO.txt
@@ -1,22 +1,24 @@
-Matrix Land (55) [115]
-Airports (100) [215]
-Mandagora Forest (50) [265]
-Superman Celebrates Diwali (80) [345]
-The Indian Job (70) [415]
-Dorsey Thief (85) [500]
-Black and White Tree (80) [580]
-Powers Game (50) [630]
-Chocolate Game (90) [720]
-A Stones Game (90) [810]
-Clues on a Binary Path (60) [870]
-Beautiful Strings (80) [950]
-Favorite Sequence (95) [1045]
-Maximising Mission Points (70) [1115]
-Police Operation (100) [1215]
-New Year Present (80) [1295]
-Travel in Hackerland (80) [1375]
-Jumping Rooks (80) [1455]
-Jeanie's Route (80) [1535]
-Computer Game (80) [1615]
-Longest Mod Path (80) [1695]
-Find The Path (75) [1770]
+P Sequences (100) [100]
+String Transmission (60) [160]
+Matrix Land (55) [215]
+Airports (100) [315]
+Mandagora Forest (50) [365]
+Superman Celebrates Diwali (80) [445]
+The Indian Job (70) [515]
+Dorsey Thief (85) [600]
+Black and White Tree (80) [680]
+Powers Game (50) [730]
+Chocolate Game (90) [820]
+A Stones Game (90) [910]
+Clues on a Binary Path (60) [970]
+Beautiful Strings (80) [1050]
+Favorite Sequence (95) [1145]
+Maximising Mission Points (70) [1215]
+Police Operation (100) [1315]
+New Year Present (80) [1395]
+Travel in Hackerland (80) [1475]
+Jumping Rooks (80) [1555]
+Jeanie's Route (80) [1635]
+Computer Game (80) [1715]
+Longest Mod Path (80) [1795]
+Find The Path (75) [1870]
